# warcbench

./: .gitignore  README.md  main.py  mypy.ini  pyproject.toml
.github/workflows/: black.yaml  mypy.yaml  ruff.yaml  test.yaml
src/warcbench/: __init__.py  config.py  exceptions.py  filters.py  logging.py  member_handlers.py  models.py  parsers.py  patches.py  patterns.py  record_handlers.py  utils.py
src/warcbench/parsers/: __init__.py  gzipped_warc.py  warc.py
src/warcbench/scripts/: __init__.py  cli_utils.py  compare_headers.py  compare_parsers.py  example.py  extra.py  extract.py  filter_records.py  inspect.py  match_record_pairs.py  summarize.py  utils.py
tests/: conftest.py  test_cli.py  test_filters.py  test_filters_and_handlers.py  test_gzipped_warc_parser.py  test_warc_parser.py
tests/assets/: after.wacz  before.wacz  datapackage-digest.json  datapackage.json  example.com.wacz  inspect.json  test-crawl.wacz
tests/assets/indexes/: index.cdx
tests/assets/pages/: pages.jsonl
