[project]
name = "warcbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rebecca Cremona", email = "rcremona@law.harvard.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
]

[project.scripts]
wb = "warcbench.scripts:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
lint = [
    "ruff>=0.9.8",
]
